<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4"
    android:orientation="vertical"
    tools:context=".sign_up_activity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/upload_image"
        android:textColor="#33691E" />

    <View
        android:id="@+id/view"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#2A602C"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="ph"
        android:ems="10"
        android:freezesText="true"
        android:gravity="center"
        android:hint="phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="#2A602C"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="E-mail"
        android:ems="10"
        android:freezesText="true"
        android:gravity="center"
        android:hint="Gmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#2A602C"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#2A602C"
        android:textSize="25sp"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#ffa400"
        android:text="@string/Register"
        android:textColor="#33691E"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:id="@+id/view2"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/or_with"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>